kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: extract-data
    image: shubhamkulkarni01/lpnet:original_pytorch
    resources:
      limits:
        memory: 8Gi
        cpu: 4
      requests:
        memory: 8Gi
        cpu: 4
    command: ["/bin/bash", "-c"]
    args: ['sleep infinity']
  restartPolicy: Never
