kubernetes/notebook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    job: lpnet
  name: lpnet-svc
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    lpnet: train
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  name: lpnet-ingress
spec:
  rules:
  - host: lpnet.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: lpnet-svc
          servicePort: 8888
        path: /
